--- a/CodeScannerGenerator/i18N/SettingsWidget.en-US.xaml
+++ b/CodeScannerGenerator/i18N/SettingsWidget.en-US.xaml
@@ -12,4 +12,5 @@
     <sys:String x:Key="RunOnStartup">Run application on Windows startup</sys:String>
     <sys:String x:Key="RunMinimisedOnStartup">Run minimized on Windows startup</sys:String>
     <sys:String x:Key="AutotypeConfimation">Confirm autotype</sys:String>
+    <sys:String x:Key="ShowFloatingButton">Show floating button</sys:String>
 </ResourceDictionary>
