- fixed bug when not width or height - translation bug fixed

--- a/CodeScannerGenerator/i18N/SettingsWidget.de-DE.xaml
+++ b/CodeScannerGenerator/i18N/SettingsWidget.de-DE.xaml
@@ -8,7 +8,7 @@
     <sys:String x:Key="Browser">Browser:</sys:String>
     <sys:String x:Key="AutotypeHotkey">Hotkey für automatische Eingabe:</sys:String>
     <sys:String x:Key="HideToTrayOnMinimise">Bei Minimierung verstecken</sys:String>
-    <sys:String x:Key="HideToTrayOnClose">Beim Schließen minieren</sys:String>
+    <sys:String x:Key="HideToTrayOnClose">Beim Schließen minimieren</sys:String>
     <sys:String x:Key="RunOnStartup">Beim Windows-Start ausführen</sys:String>
     <sys:String x:Key="RunMinimisedOnStartup">Wird beim Start von Windows minimiert ausgeführt</sys:String>
     <sys:String x:Key="AutotypeConfimation">Automatische Eingabe mir Hotkey bestätigen</sys:String>
