--- a/CodeScannerGenerator/GenerateWidget.xaml
+++ b/CodeScannerGenerator/GenerateWidget.xaml
@@ -68,8 +68,9 @@
             
             <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=Text}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Generate" Margin="0 0 10 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" KeyUp="Text_Generate_KeyUp"/>
-            <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 110 0" Width="90" Click="ButtonGenerate_Click"></Button>
-            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="90" Click="ButtonSave_Click"></Button>
+            <Button Grid.Column="2" Grid.Row="0" x:Name="Button_VCard" Content="VCARD" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 210 0" Width="90" Click="Button_VCardClick"></Button>
+            <Button Grid.Column="3" Grid.Row="0" Content="{DynamicResource ResourceKey=Generate}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 110 0" Width="90" Click="ButtonGenerate_Click"></Button>
+            <Button Grid.Column="4" Grid.Row="0" Content="{DynamicResource ResourceKey=Save}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="90" Click="ButtonSave_Click"></Button>
         </Grid>
 
         <WindowsFormsHost Grid.Row="2" Grid.ColumnSpan="2" Margin="20 20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="windowsFormsHost2" Background="White"/>
