--- a/CodeScannerGenerator/ScanWidget.xaml
+++ b/CodeScannerGenerator/ScanWidget.xaml
@@ -44,6 +44,7 @@
             
             <Label Grid.Column="0" Grid.Row="0" Margin="10 0" Content="{DynamicResource ResourceKey=LastScannedText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <TextBox Grid.Column="1" Grid.Row="0" x:Name="Text_Scan" Margin="0 0 10 0" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" IsReadOnly="True"/>
+            <Button Grid.Column="2" Grid.Row="0" Content="VCARD" x:Name="Button_VCard" Visibility="Collapsed" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 210 0" Width="90" Click="ButtonVCard_Click"></Button>
             <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=Copy}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 110 0" Width="90" Click="ButtonCopy_Click"></Button>
             <Button Grid.Column="2" Grid.Row="0" Content="{DynamicResource ResourceKey=OpenURL}" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#003963" Padding="0 0 0 0" Margin="0 0 10 0" Width="90" Click="ButtonOpenUrl_Click"></Button>
         </Grid>
