--- a/CodeScannerGenerator/i18N/ScanWidget.en-US.xaml
+++ b/CodeScannerGenerator/i18N/ScanWidget.en-US.xaml
@@ -27,5 +27,7 @@
     <sys:String x:Key="UnexpectedErrorTitle">Unexpected error</sys:String>
     <sys:String x:Key="DeviceNotConnectedErrorTitle">Device not connected</sys:String>
     <sys:String x:Key="DeviceNotConnectedErrorMessage">Device could not be found and is probably not connected.</sys:String>
+    <sys:String x:Key="NotValidVCARDErrorTitle">Not valid format</sys:String>
+    <sys:String x:Key="NotValidVCARDErrorMessage">Code is not in valid vcard format.</sys:String>
     
 </ResourceDictionary>
