--- a/CodeScannerGenerator/i18N/ScanWidget.pl-PL.xaml
+++ b/CodeScannerGenerator/i18N/ScanWidget.pl-PL.xaml
@@ -27,5 +27,7 @@
     <sys:String x:Key="UnexpectedErrorTitle">Niespodziewany błąd</sys:String>
     <sys:String x:Key="DeviceNotConnectedErrorTitle">Urządzenie niepodłączone</sys:String>
     <sys:String x:Key="DeviceNotConnectedErrorMessage">Urządzenie nie zostało znalezione i prawdopodobnie nie jest podłączone.</sys:String>
-    
+    <sys:String x:Key="NotValidVCARDErrorTitle">Niepoprawny format</sys:String>
+    <sys:String x:Key="NotValidVCARDErrorMessage">Kod nie jest poprawnym formatem VCARD.</sys:String>
+
 </ResourceDictionary>
