--- a/CodeScannerGenerator/i18N/VCardTemplate.en-US.xaml
+++ b/CodeScannerGenerator/i18N/VCardTemplate.en-US.xaml
@@ -22,5 +22,6 @@
     <sys:String x:Key="Email">Email</sys:String>
     <sys:String x:Key="Website">Website</sys:String>
 
+    <sys:String x:Key="Error">Error</sys:String>
     <sys:String x:Key="Cancel">Cancel</sys:String>
 </ResourceDictionary>
