--- a/CodeScannerGenerator/i18N/VCardTemplate.pl-PL.xaml
+++ b/CodeScannerGenerator/i18N/VCardTemplate.pl-PL.xaml
@@ -22,5 +22,6 @@
     <sys:String x:Key="Email">Email</sys:String>
     <sys:String x:Key="Website">Strona internetowa</sys:String>
 
+    <sys:String x:Key="Error">Błąd</sys:String>
     <sys:String x:Key="Cancel">Anuluj</sys:String>
 </ResourceDictionary>
