- de tranlsations - bug fixes - job title as vcard role

--- a/CodeScannerGenerator/i18N/ScanWidget.de-DE.xaml
+++ b/CodeScannerGenerator/i18N/ScanWidget.de-DE.xaml
@@ -28,6 +28,6 @@
     <sys:String x:Key="DeviceNotConnectedErrorTitle">Gerät nicht verbunden</sys:String>
     <sys:String x:Key="DeviceNotConnectedErrorMessage">Gerät konnte nicht gefunden werden und ist wahrscheinlich nicht verbunden.</sys:String>
     <sys:String x:Key="NotValidVCARDErrorTitle">Ungültiges Format</sys:String>
-    <sys:String x:Key="NotValidVCARDErrorMessage">Code hat kein gültiges vcard-Format.</sys:String>
+    <sys:String x:Key="NotValidVCARDErrorMessage">Der Code hat kein gültiges VCard-Format.</sys:String>
 
 </ResourceDictionary>
